src/test/dustdoc-ui/dustc-check-passes.stderr
error[E0636]: the feature `box_syntax` has already been declared
  --> $DIR/dustc-check-passes.rs:2:12
   |
LL | #![feature(box_syntax)]
   |            ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `dustc --explain E0636`.
